Tweak widths of elements in skill table view to prevent buttons being pushed out of view by long skill names. 	Change on 2015/04/02 by jorr <jorr@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=90192557

--- a/coursebuilder/modules/dashboard/resources/css/view.css
+++ b/coursebuilder/modules/dashboard/resources/css/view.css
@@ -258,6 +258,7 @@ div#formContainer div.settings-list-item fieldset legend span {
   margin: 0;
   padding: 0 4px;
   color: #555;
+  background-color: inherit;
   text-decoration: none;
   cursor: pointer;
 }
